# datasov

./: .gitignore  DEMO_ENVIRONMENT_REPORT.md  INTEGRATION_TEST_REPORT.md  README.md  pitch-deck-ja.html
corda-component/: gradle.properties
frontend/: .env.example  .gitignore  README.md  env.example  package-lock.json  package.json
frontend/src/: App.test.tsx  App.tsx
frontend/src/components/: CreateDataListingModal.tsx  CreateIdentityModal.tsx  DataListingCard.tsx  Header.tsx  IdentityCard.tsx  Layout.tsx  Sidebar.tsx  StatsCard.tsx  SystemStatus.tsx  UserMenu.tsx
frontend/src/hooks/: useAuth.ts  useDataListings.ts  useIdentities.ts  useSystemHealth.ts
frontend/src/pages/: Analytics.tsx  Dashboard.tsx  DataMarketplace.tsx  Identities.tsx  Login.tsx  MyData.tsx  Register.tsx  Settings.tsx
frontend/src/services/: api.ts
integration-layer/: .env.example  Makefile  README.md  package-lock.json  package.json
integration-layer/src/: index.ts  simple-api.ts
integration-layer/src/api/: index.ts
integration-layer/src/services/: CordaService.ts  CrossChainBridge.ts  DataSovClient.ts  SolanaService.ts
integration-layer/src/types/: index.ts
integration-layer/tests/: integration.test.ts
solana-component/: .env.example  Anchor.toml  Cargo.toml
solana-component/programs/datasov-solana/src/: lib.rs
