[package]
name = "datasov-solana"
version = "0.1.0"
description = "DataSov Solana Component - Data Marketplace for Tokenized Data Ownership"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "datasov_solana"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
solana-program = "~1.16.0"
spl-token = "4.0.0"
spl-associated-token-account = "2.0.0"
